new pix and interim array

--- a/03-express/01-express.js/03-ejs-cat-data/views/cats.ejs
+++ b/03-express/01-express.js/03-ejs-cat-data/views/cats.ejs
@@ -16,8 +16,8 @@
         <div>
             <p>
                 cats will go in here
-                <a href="/cats/trouble" data-nina=52><img src="images/donkey1.jpg" /></a>
-                <a href="/cats/twotone" data-nina=99><img src="images/donkey2.jpg" /></a>
+                <a href="/cats/trouble" data-nina=52><img src="images/trouble.jpg" />Trouble</a>
+                <a href="/cats/twotone" data-nina=99><img src="images/twotone.jpg" />Two Tone</a>
 
             </p>
 
