adding food var

--- a/03-express/01-express.js/03-ejs-cat-data/views/details.ejs
+++ b/03-express/01-express.js/03-ejs-cat-data/views/details.ejs
@@ -7,10 +7,10 @@
     </head>
 
 <body>
-    <h2>Here are all the users:</h2>
-    <% for (var x in users) { %>
-        <h3>Name: <%= users[x].name %></h3>
-        <h4>Email: <%= users[x].email %></h4>
+    <h2>Info about this cat:</h2>
+    <% for (var x in cats) { %>
+        <h3>Name: <%= cats[x].name %></h3>
+        <h4>Food: <%= food[x].email %></h4>
         <hr>
     <% } %>
 </body>
