--- a/03-express/01-express.js/03-ejs-cat-data/views/details.ejs
+++ b/03-express/01-express.js/03-ejs-cat-data/views/details.ejs
@@ -7,16 +7,18 @@
     </head>
 
 <body>
-    <h2>Info about :</h2>
+    <h2>Info about <%= cats[0].name %>:</h2>
     <% for (var x in cats) { %>
         <h3>Name: <%= cats[0].name %></h3>
         <h4>Food: <%= cats[0].food %></h4>
         <h4>Age:  <%= cats[0].age %></h4>
         <hr>
-        <ul>Sleepss
+        <ul>Sleeps here
             <% for (var sl in cats[0].sleep) { %>
-                <li> sl </li>
+                <li> <%=cats[0].sleep[sl] %></li>
                 <% } %>
-    <% } %>
+    <% } 
+    
+    %>
 </body>
 </html>
