AJAX CORS tutorial update

--- a/03-express/00-platform/AJAX-CORS/views/asdf.html
+++ b/03-express/00-platform/AJAX-CORS/views/asdf.html
@@ -10,21 +10,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- <script>
-    $(document).ready(function(){
-        $('#peopleBtn').click(function(){
-            // let's make the request to our OWN server!
-            $.get('/people', function(data){
-                // log the data to be sure we have it before we dive into manipulating the DOM
-                console.log("got the data", data);
-            }, 'json');
-        });
-    });
-</script>
     </head>
-    
     <body>
-    <button id="peopleBtn">People</button>
-</body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        
+        <script src="" async defer></script>
+    </body>
+</html>
