--- a/03-express/01-express.js/07-swapi/views/index.ejs
+++ b/03-express/01-express.js/07-swapi/views/index.ejs
@@ -36,9 +36,8 @@
         <hr>
 
         <% for (var x in people) { %>
-            <h3>Name: <%=x %></h3>
+            <h3>Record Number: <%=x %></h3>
             <h3>Name: <%=people[x] %></h3>
-
             <hr>
         <% } %>
 
