--- a/04-mongodb/00-platform/basic_mongoose_app/views/index.ejs
+++ b/04-mongodb/00-platform/basic_mongoose_app/views/index.ejs
@@ -28,7 +28,7 @@
             <h2>Here are all the users:</h2>
             <% for (var x in users) { %>
                 <h3>Name: <%= users[x].name %></h3>
-                <h4>Email: <%= users[x].email %></h4>
+                <h4>Age: <%= users[x].age %></h4>
                 <hr>
             <% } %>
 
