quoting dojo completed

--- a/04-mongodb/02-mongoose/01-quoting-dojo/views/quotes.ejs
+++ b/04-mongodb/02-mongoose/01-quoting-dojo/views/quotes.ejs
@@ -16,17 +16,12 @@
 
             Some initial content
 
-            <h2>Here are the qwesome quotes!</h2>
+            <h2>Here are the awesome quotes!</h2>
             <% for (var quote  of quotes) { %>
-                <h3> <%= quote.quotation %></h3>
-                <h4>    -----: <%= quote.name %> at <%= quote.createdat %>  </h4>
+                <h3> <%= quote.quote %></h3>
+                <h4>    -----: <%= quote.name %> at <%= quote.createdAt %>  </h4>
                 <hr>
             <% } %>
-
-
-
-
-
         </div>
     </body>
 </html>
