--- a/04-mongodb/02-mongoose/01-quoting-dojo/views/welcome.ejs
+++ b/04-mongodb/02-mongoose/01-quoting-dojo/views/welcome.ejs
@@ -16,13 +16,14 @@
 
             <fieldset>Welcome to Coding Dojo
                 <form action='/quotes' method='POST'>
-
+                    Your Name: <input type='text' name='name'>
+                    Your Quotation: <input type='text' name='quote'>
                     <input type='submit' value='Add my quote!'>
                 </form>
 
                 <form action='/quotes' method='GET'>
 
-                    <input type='submit' value='Skip to quotes!'>
+                <input type='submit' value='Skip to quotes!'>
                 </form>
             </fieldset>
         </div>
