--- a/04-mongodb/02-mongoose/02-mongoose-dashboard/views/index.ejs
+++ b/04-mongodb/02-mongoose/02-mongoose-dashboard/views/index.ejs
@@ -1,25 +1,36 @@
-<!--includes delete button
-shows all wolves
--->
-
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Dogs!!!</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Dogs</h1>
+        <a href="/dogs/new"><button>Add a New Dog!</button></a>
+        <table>
+            <thead>
+                <tr>
+                    <th>Dog Name</th>
+                    <th>Dog Breed</th>
+                    <th>Dog Age</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            <% for (const dog of dogs) { %>
+                <tr>
+                    <td><a href="/dogs/<%=dog._id%>"><%=dog.name%></a></td>
+                    <td><%=dog.breed%></td>
+                    <td><%=dog.age%></td>
+                    <td><a href="/dogs/edit/<%=dog._id %>">Edit</a>  <a href="/dogs/destroy/<%=dog._id%>">Delete</a></td>
+                </tr>
+            <% } %>
+            </tbody>
+        </table>
+    </div>
+</body>
 </html>
