--- a/04-mongodb/02-mongoose/03-message-board/views/index.ejs
+++ b/04-mongodb/02-mongoose/03-message-board/views/index.ejs
@@ -16,7 +16,7 @@
         <fieldset>Create New Message
                 <form action='/newMessage' method='POST'>
                     Your Name: <input type='text' name='name'>
-                    Your Quotation: <input type='text' name='quote'>
+                    Message: <input type='text' name='quote'>
                     <input type='submit' value='Post Message'>
             </fieldset>
 
