--- a/04-mongodb/02-mongoose/02-mongoose-dashboard/views/dogs/new.ejs
+++ b/04-mongodb/02-mongoose/02-mongoose-dashboard/views/dogs/new.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="/dogs" method="POST" autocomplete="off">
+        <form action=c method="POST" autocomplete="off">
             <fieldset>
                 <legend>Our new dog:</legend>
                 Name:<br>
