--- a/05-angular/03-dom-manipulation/RestfulTasksInter/src/app/app.component.html
+++ b/05-angular/03-dom-manipulation/RestfulTasksInter/src/app/app.component.html
@@ -1,26 +1,49 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div *ngIf="tasks">
+<div>
   <!--//added with Wes -->
 
   <div style="text-align:center">
     <h1>Welcome to {{ title }}!</h1>
 
-    <h2>{{ second }}</h2>
-  </div>
-  <ul style="text-align:center">
-    <li *ngFor="let task of tasks">
-      {{ task?.title }} - {{ task?.description }}
-      <!-- //safe navigation
-      operator...[from Shannon] don't evaluate properties of task until have it -->
-    </li>
-  </ul>
+    <div id="interactive">
+      <hr />
+      <p>Adding ability to allow user to call for tasks to display</p>
+      <button (click)="onButtonGetTasks()" id="getTasksByClick">
+        click here to get all tasks
+      </button>
 
-  <h2 style="text-align:center">{{ third }}</h2>
-  <ul style="text-align:center">
-    <li>new goes here {{ task?.title }} - {{ task?.description }}</li>
-  </ul>
-</div>
+      <p>for now, this just sends back a 5</p>
+      <button (click)="onButtonGetTask(5)" id="getTasksByClick">
+        click here to get task 5
+      </button>
 
-//
-<!-- <li>{{ tasks[2].title }} - {{ tasks[2].description }}</li>
+      <fieldset *ngIf="tasks">
+        <legend>
+          Requested results will show up here
+        </legend>
+        <div *ngIf="tasks">
+          <ul style="text-align:center">
+            <li *ngFor="let task of tasks2">
+              {{ task?.title }}
+              <button
+                (click)="getTaskFromService(task._id)"
+                id="getTaskDescription"
+                value="5ce0e5136102776230e2c41d"
+              >
+                SHOW
+              </button>
+              <!-- //safe navigation
+            operator...[from Shannon] don't evaluate properties of task until have it -->
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>{{ task?.title }}</p>
+          <p>{{ task?.description }}</p>
+        </div>
+      </fieldset>
+    </div>
+
+    <!-- <li>{{ tasks[2].title }} - {{ tasks[2].description }}</li>
 wrong way to do single task -->
+  </div>
+</div>
