--- a/05-angular/03-dom-manipulation/RestfulTasksCRUD/src/app/app.component.html
+++ b/05-angular/03-dom-manipulation/RestfulTasksCRUD/src/app/app.component.html
@@ -10,48 +10,56 @@
         <legend>
           New Task
         </legend>
-        <form (submit)="onSubmitNew()">
-          <p>dubcurl newTask | json dubcurl</p>
+        <form (submit)="onSubmitNew($event, taskForm)" #taskForm="ngForm" autocomplete="off">
+          <p>{{ newTask | json }}</p>
           <label>
             Task title:
 
-            <input
-              type="text"
-              name="newTask.title"
-              [(ngModel]="newTask.title"
-            />
+            <input type="text" name="newTask.title" [(ngModel)]="newTask.title" />
           </label>
           <label>
             Task description:
-            <input
-              type="text"
-              name="newTask.description"
-              [(ngModel)]="newTask.description"
-            />
+            <input type="text" name="newTask.description" [(ngModel)]="newTask.description" />
           </label>
           <input type="submit" value="Create Task" />
         </form>
       </fieldset>
 
+      <!-- Begin list of all tasks -->
       <fieldset *ngIf="tasks">
         <legend>
           Task List
         </legend>
         <div *ngIf="tasks">
-          <ul style="text-align:center">
-            <li *ngFor="let task of tasks">
-              {{ task?.title }}
-              <button
-                (click)="getTaskFromService(task._id)"
-                id="getTaskDescription"
-                value="5ce0e5136102776230e2c41d"
-              >
-                SHOW
-              </button>
-              <!-- //safe navigation
-            operator...[from Shannon] don't evaluate properties of task until have it -->
-            </li>
-          </ul>
+          <fieldset *ngFor="let task of tasks">
+            <p>{{ task?.title }}</p>
+            <p>{{ task?.description }}</p>
+            <button (click)="showEditForm(task._id)" id="" value="">
+              Edit
+            </button>
+            <button (click)="removeTask(task._id)" id="" value="">
+              Delete
+            </button>
+            <!-- Begin edit form             -->
+            <!-- <form (submit)="onSubmitUpdate($event, taskForm)" #taskForm="ngForm" autocomplete="off"> -->
+            <form autocomplete="off">
+              <p>{{ task | json }}</p>
+              <p>Edit a task</p>
+              <label>
+                Task title:
+
+                <input type="text" name="task.title" [(ngModel)]="task.title" />
+              </label>
+              <label>
+                Task description:
+                <input type="text" name="task.description" [(ngModel)]="task.description" />
+              </label>
+              <input type="submit" value="Edit" />
+            </form>
+
+            <!-- //safe navigation
+              operator...[from Shannon] don't evaluate properties of task until have it -->
+          </fieldset>
         </div>
       </fieldset>
     </div>
