cake average working

--- a/05-angular/03-dom-manipulation/RateMyCakes/src/app/app.component.html
+++ b/05-angular/03-dom-manipulation/RateMyCakes/src/app/app.component.html
@@ -15,7 +15,7 @@
           type="text"
           name="bakedBy"
           [(ngModel)]="cake.bakedBy"
-          placeholder="Charlie Brown"
+          placeholder=""
         />
         <label for="name">Image url </label>
         <input type="text" name="imageUrl" [(ngModel)]="cake.imageUrl" />
