2nd Weather API commit

--- a/05-angular/04-navigation/weatherAPI/src/app/burbank/burbank.component.html
+++ b/05-angular/04-navigation/weatherAPI/src/app/burbank/burbank.component.html
@@ -1,1 +1,15 @@
-<p>burbank works! <img src="/assets/images/burbank.jpg" /></p>
+<div class="comp-container">
+  <h3>Burbank, CA</h3>
+  <div class="DataAndPict">
+    <ul>
+      <li>Humidity: main.humidity</li>
+      <li>Temperature (Average): calculated</li>
+      <li>Temperature (High): main.temp_max</li>
+      <li>Temperature (Low): main.temp_min</li>
+      <li>Status: weather[0].description</li>
+    </ul>
+    <img src="/assets/images/burbank.jpg" />
+
+    <p></p>
+  </div>
+</div>
