--- a/05-angular/04-navigation/weatherAPI/src/app/dallas/dallas.component.html
+++ b/05-angular/04-navigation/weatherAPI/src/app/dallas/dallas.component.html
@@ -4,6 +4,7 @@
     <ul>
       <li>Humidity: {{ weathers?.main.humidity }}</li>
       <li>Temperature (Average): {{ averageTemp }}</li>
+      <li>Temperature (Current): {{ weathers?.main.temp }}</li>
       <li>Temperature (High): {{ weathers?.main.temp_max }}</li>
       <li>Temperature (Low): {{ weathers?.main.temp_min }}</li>
       <li>Status: {{ (weathers?.weather)[0].description }}</li>
