--- a/05-angular/04-navigation/weatherAPI/src/app/seattle/seattle.component.html
+++ b/05-angular/04-navigation/weatherAPI/src/app/seattle/seattle.component.html
@@ -4,7 +4,7 @@
     <ul>
       <li>Humidity: {{ weathers?.main.humidity }}</li>
       <li>Temperature (Average): {{ averageTemp }}</li>
-      <li>Temperature (High): {{ weather?.main.temp_max }}</li>
+      <li>Temperature (High): {{ weathers?.main.temp_max }}</li>
       <li>Temperature (Low): {{ weathers?.main.temp_min }}</li>
       <li>Status: {{ (weathers?.weather)[0].description }}</li>
     </ul>
