Ninja Gold 0526 commit

--- a/05-angular/03-dom-manipulation/NinjaGold/src/app/location-list/location-list.component.html
+++ b/05-angular/03-dom-manipulation/NinjaGold/src/app/location-list/location-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  location-list works!
-</p>
+<div class="container">
+  <div *ngFor="let location of locations" class="location">
+    <h2>{{ location.name }}</h2>
+    <p>(gives {{ location.minGold }}-{{ location.maxGold }} golds)</p>
+    <button (click)="onClick(location)">Find Gold!</button>
+  </div>
+</div>
